# ux-pilot

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: TEST_SCENARIOS.md  test_commands.py  test_config.py  test_guardrails.py  test_humanization.py  test_injector.py  test_prompt_builder.py  test_state_generator.py  test_traits.py
ux_pilot/: __init__.py  __main__.py  benchmark.py  cli.py  config.py
ux_pilot/analysis/: __init__.py  analyzer.py  models.py
ux_pilot/humanization/: __init__.py  injector.py  mouse.py  profile.py  scrolling.py  timing.py  typing.py
ux_pilot/output/: __init__.py  comparison.py  export.py  live.py  summary.py
ux_pilot/personas/: __init__.py  catalog.py  loader.py  prompt_builder.py  rules.py  state_generator.py  traits.py  translator.py
ux_pilot/runner/: __init__.py  agent.py  commands.py  guardrails.py  hooks.py  llm_factory.py  orchestrator.py  state.py  tracking.py
ux_pilot/storage/: __init__.py  history.py
