[project]
name = "ux-pilot"
version = "0.1.0"
description = "AI personas that simulate real humans browsing your website — find UX friction from the command line"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "browser-use>=0.12.0",
    "litellm>=1.55.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
]

[project.scripts]
ux-pilot = "ux_pilot.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ux_pilot*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
